2006-12-26 Raul Mateos  <raulofpandora@gmail.com>

	* extras/Pandora_DataServer_Diagram-1.odg,
	Pandora_DataServer_Diagram-2.odg, Pandora_NetworkServer_Diagram.odg:
	New files with new architecture. First try.

2006-12-26 Manuel Arostegui <marostegui@artica.es>

	* en/pandora_introduction.xml, pandora_advanced.xml, pandora_install.xml
	  : Text corrections.

	* en/man/pandora.1, pandora_agents.1, pandora, pandora_agents,
	  pandora_console.1, pandora_console, pandora_server.1, pandora_server
	  : Added to repository. Pandora Man Pages

2006-12-25 Raul Mateos  <raulofpandora@gmail.com>
	
	* pandora_chapter3.xml: Explanation of monitor added. Solved error with 
	english file (maximun-> manimum; minimun -> minimum)
	
2006-12-20 Manuel Arostegui <marostegui@artica.es>

	* pandora_install.xml: Added a note about jpgraph installation.

2006-12-19 Raul Mateos  <raulofpandora@gmail.com>

	* pandora_chapter3.xml: Changed some texts.

2006-12-04 Raul Mateos  <raulofpandora@gmail.com>

	* en/images/servers1.png, servers2.png: Renamed files from Servers.png and
	servers1.png.
	
	* pandora_chapter2.xml, pandora_chapter7.xml: Updated files.

2006-12-03  Sancho Lerena  <slerena@artica.es>

	* pandora.xml: Updated header, now is Pandora FMS not Pandora. Add
	revision ( I hope that final ).

	* pandora_install.xml: Add chapter for Windows Agent key creation,
	and some text changes to make reference to new installer. Old
	options deleted and some texts changed (debug mode).

	* pandora_userguide:  Updated header, now is Pandora FMS not Pandora. Add
	revision ( I hope that final )

	* 1-6.jpg: Added files for Windows Agent key creation from HTML help.

2006-11-30  Sancho Lerena  <slerena@artica.es>

	* pandora.xml: Updated header, fixed problems with punctuation
	 chars, and added subtitle. Add revision.

	* .pdf: Updated PDF.

	* pandora_logo.jpg: Big images with margins, fit ok on first page.

	* pandora_userguide.xml: Added subtitle and revision.